# SimdCEP

./: README.md
SimdCEP/: CMakeLists.txt  Match.cpp  Match.h  ReadMe.txt  bitParellMatch.cpp  bitSequence.cpp  config.txt  event.h  fileio.cpp  global.cpp  global.h  includefile.h  parseData.cpp  run.sh
SimdCEP/data/: 5000Data.stream
